<resources>
    <string name="app_name">Communify</string>
    <string name="TituloVentanaComparteHogar">Comparte</string>
    <string name="Hogar">Hogar</string>
    <string name="Social">Social</string>
    <string name="Otros">Otros</string>
    <string name="Cocina">Cocina</string>
    <string name="Bricolaje">Bricolaje</string>
    <string name="Jardin">Jardin</string>
    <string name="Mecanica">Mecanica</string>
    <string name="ingreseDireccion">Ingrese su dirección</string>
    <string name="compartiramor">Share is love</string>
    <string name="compartir">Compartir</string>
    <string name="solicitar">Solicitar</string>
    <string name="gracias">Gracias por hacer una sociedad mejor</string>
    <string name="nombre_apeSingUp">Nombre y Apellidos</string>
    <string name="Email">Email<sup>*</sup></string>
    <string name="PasswordSignUp">Contraseña<sup>*</sup></string>
    <string name="UsuarioSignUp">Usuario</string>
    <string name="BtnRegistrarse">Registrarse</string>
    <string name="txtSignup">Al registrarte aceptas los terminos y condiciones de Communify</string>


    <string name="sign">"¿You don´t have an account?<b><u>Sing up"</u></b>.</string>

    <!--Google -->

    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">Communify</string>
    <!---->

    <string name="TituloDescripcion">Añade una descripción al producto</string>
    <string name="EscribeAqui">Escribe aquí...</string>
    <string name="DescripcionProducto">Escribe un título para el producto</string>
    <string name="TituloProducto">Añade un título al producto</string>
    <string name="Compartir">La mejor App para Compartir y poder recibir lo que comparten de forma gratuita\n <u><b>¡¡¡Share is love!!\n</b> </u><p>https://play.google.com/store/apps/details?id=com.pass.communify</p></string>

    <string-array name="lenguajes">
        <item>Idiomas</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>Russian</item>
    </string-array>
    <string name="CuidadoPersonasMayores">Cuidado de personas mayores</string>
    <string name="BuscarAmigos">Buscar amigos</string>
    <string name="SalirFiesta">Salir de fiesta</string>
    <string name="HacerCompra">Hacer la compra</string>
    <string name="Historial">Historial</string>


</resources>