<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComparteHogar">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSocial"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/Social"
        app:layout_constraintStart_toEndOf="@id/chipHogar"
        app:layout_constraintTop_toBottomOf="@+id/tv_direccion" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipHogar"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/Hogar"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/chipSocial" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_direccion"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/ingreseDireccion"
        android:textAlignment="center"
        android:textColor="#04BFA9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/TituloVentanaComparteHogar"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipOtros"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginLeft="5dp"
        android:text="@string/Otros"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chipSocial"
        app:layout_constraintTop_toTopOf="@+id/chipSocial" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="328dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonComparte"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/chipSocial"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoCocina"
                android:layout_width="164dp"
                android:layout_height="180dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fondococina"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/fotoBricolaje"
                android:layout_width="165dp"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fotobricolaje"
                tools:ignore="DuplicateIds,VectorDrawableCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/Cocina"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/Bricolaje"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoJardin"
                android:layout_width="164dp"
                android:layout_height="180dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fotojardin"
                tools:ignore="DuplicateIds,VectorDrawableCompat" />

            <ImageView
                android:id="@+id/fotoMecanica"
                android:layout_width="165dp"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/fotomecanica"
                tools:ignore="DuplicateIds,VectorDrawableCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Jardin"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Mecanica"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonComparte"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/Communify_BotonesPrincipales"
        android:text="@string/TituloVentanaComparteHogar"
        android:textColor="@color/Communify_White"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonComparte" />

    <Button
        android:id="@+id/buttonAnterior"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonComparte" />

</androidx.constraintlayout.widget.ConstraintLayout>