<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComparteHogar">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_on_secondary_24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSolicita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonSolicita"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSocial"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/Social"
        android:textAlignment="center"
        android:textColor="@color/Communify_White"
        app:chipBackgroundColor="@color/Communify_BotonesPrincipales"
        app:layout_constraintStart_toEndOf="@id/chipHogar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipHogar"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:gravity="center_horizontal"
        android:text="@string/Hogar"
        android:textAlignment="center"
        android:textColor="@color/Communify_White"
        app:chipBackgroundColor="@color/Communify_Fondo_labels_85"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/chipSocial" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chipOtros"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_horizontal"
        android:text="@string/Otros"
        android:textAlignment="center"
        android:textColor="@color/Communify_White"
        app:chipBackgroundColor="@color/Communify_Fondo_labels_85"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/chipSocial"
        app:layout_constraintTop_toTopOf="@+id/chipSocial" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonComparte"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/chipSocial"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:padding="0dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/fotoAbuelos"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:padding="0dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/imagenabuelos"
                    tools:ignore="VectorDrawableCompat" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_marginLeft="20dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/fotoAmigos"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/fotoamigos"
                    tools:ignore="DuplicateIds,VectorDrawableCompat" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/CuidadoPersonasMayores"
                android:textAlignment="center"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/BuscarAmigos"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/fotoCompra"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/imagencompra"
                    tools:ignore="DuplicateIds,VectorDrawableCompat" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_marginLeft="20dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/fotoFiesta"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/fotofiesta"
                    tools:ignore="DuplicateIds,VectorDrawableCompat" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/HacerCompra"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/SalirFiesta"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonComparte"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Communify_BotonesPrincipales"
        android:text="@string/TituloVentanaComparteHogar"
        android:textColor="@color/Communify_White"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSolicita"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Communify_BotonesPrincipales"
        android:text="@string/solicitar"
        android:textColor="@color/Communify_White"
        app:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>